numerous sections added

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#music">Music</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#music">Music</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#mentor">Mentoring</a>
             </li>
           </ul>
         </div>
@@ -58,10 +61,10 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="profile.jpg" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="small.png" alt="" id="opening">
         <h1 class="text-uppercase mb-0">Hartaig Singh</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Data Scientist - Musician - Dog Lover</h2>
+        <h2 class="font-weight-light mb-0"> Healthcare Data Scientist - R Shiny Developer - Musician</h2>
       </div>
     </header>
 
@@ -70,6 +73,7 @@
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Projects</h2>
         <hr class="star-dark mb-5">
+        <div class="col-lg-12"> <p class="lead">Below are examples of R shiny applications specifically designed to help researchers explore, understand, and analyze their data without the need to learn a new programming language or download software. All that is required is internet connection to open the link! These hassle-free simulators are tailored specifically for the researcher's primary question of interest and structure of their data set allowing them to quickly crunch numbers and investigate spur of the moment thoughts. Feel free to play with the applications, scroll through tabs, and adjust parameters to see their changes reflected by the tables and charts.</p></div>
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
@@ -78,7 +82,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="small.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -88,7 +92,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+              <img class="img-fluid" src="small.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -98,7 +102,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="small.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -132,6 +136,9 @@
             </a>
           </div>
         </div>
+        <div class="text-center">
+          <p>If this is of interest for your research or business, please contact me for more information. Every application is completely customized to suit your needs. </p>
+        </div>
       </div>
     </section>
 
@@ -141,22 +148,58 @@
         <h2 class="text-center text-uppercase text-white">About Me</h2>
         <hr class="star-light mb-5">
         <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">I am a data scientist that loves music.</p>
+          <div class="col-lg-6 ml-auto">
+            <p class="lead" id="me">Passionate healthcare data scientist with a thirst for knowledge. The backbone of my approach consists of needing to understand the "why" behind a process, action, or behavior, posing What if? questions, experimenting with cutting edge techniques and researching a problem from all angles to ultimately tell a story with data. Complimented with a MS in Biostatistics from Columbia University and relevant work experience at a quantitative growth strategy consulting firm, I have sharpened the necessary tools and developed the appropriate analytical thought process to pose questions and offer insight in a meticulous and detail oriented fashion to healthcare researchers, market analysts, and physicians by leveraging the power of data. </p>
           </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead"></p>
+          <div class="col-lg-6 mr-auto">
+            <p class="lead">
+              <img class="img-fluid" src="Hartaig_Resume.png" alt="" id="resume">
+            </p>
           </div>
         </div>
         <div class="text-center mt-4">
+          <p class="lead">Email: hartaigsingh@gmail.com</p>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
+    <!-- Music Section -->
+    <section id="music">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Music</h2>
+        <hr class="star-dark mb-5">
+        <div class="row">
+          <div class="col-lg-6 mx-auto">
+         <p class="lead" id="music_desc"> While my main area of expertise is data analysis and statistics, I am also a dedicated musician with particular interests in jazz guitar and electronic music production. Having a minor in Jazz music, I played guitar for the Stony Brook big band throughout my undergraduate studies. Major influences include Pink Floyd, Judas Priest, Led Zeppelin, Queen, Charlie Christian, Duke Ellington, Art Tatum, Count Basie, Deadmau5, Wolfgang Gartner, ZHU, Tujamo, and EPROM. Check me out on soundcloud below. </p>
+          </div>
+           <div class="col-lg-6 mx-auto">
+          <a href="https://soundcloud.com/hartaig-singh/it-dont-mean-a-thing"><img class="img-fluid" src="guitar_pic.jpg" alt="" id="music_pic"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+     <section class="bg-primary text-white mb-0" id="skills">
+      <div class="container">
+        <h2 class="text-center text-uppercase text-white">Skills</h2>
+        <hr class="star-light mb-5">
+        <div class="row">
+          <div class="col-md-4 ml-auto">
+           <h3 class="text-center text-uppercase text-white">Programming</h3>
+          </div>
+          <div class="col-md-4 mr-auto">
+            <h3 class="text-center text-uppercase text-white">Methods</h3>
+          </div>
+          <div class="col-md-4 mr-auto">
+            <h3 class="text-center text-uppercase text-white">Music</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+     <section id="mentor">
+      <div class="container">
+        <h2 class="text-center text-uppercase text-secondary mb-0">Mentoring</h2>
         <hr class="star-dark mb-5">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -168,6 +211,7 @@
     </section>
 
     <!-- Footer -->
+    
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
@@ -182,8 +226,8 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-google-plus-g"></i>
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="mailto:hartaigsingh@gmail.com">
+                  <i class="fa fa-envelope"></i>
                 </a>
               </li>
               <li class="list-inline-item">
@@ -192,13 +236,8 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/hartaig-singh-90227b127/">
                   <i class="fab fa-fw fa-linkedin-in"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-dribbble"></i>
                 </a>
               </li>
             </ul>
@@ -210,9 +249,10 @@
       </div>
     </footer>
 
+
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; Hartaig Singh 2018</small>
       </div>
     </div>
 
@@ -240,7 +280,7 @@
               <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Open Project</a>
             </div>
           </div>
         </div>
@@ -364,10 +404,6 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
