--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Projects</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Personal Projects</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
@@ -49,9 +49,6 @@
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#mentor">Mentoring</a>
             </li>
           </ul>
         </div>
@@ -64,38 +61,38 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="small.png" alt="" id="opening">
         <h1 class="text-uppercase mb-0">Hartaig Singh</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0"> Healthcare Data Scientist - R Shiny Developer - Musician</h2>
+        <h2 class="font-weight-light mb-0"> Healthcare Data Scientist - Market Research Analyst - Musician</h2>
       </div>
     </header>
 
     <!-- Portfolio Grid Section -->
     <section class="portfolio" id="portfolio">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Projects</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">Personal Projects</h2>
         <hr class="star-dark mb-5">
         <div class="col-lg-12"> <p class="lead">Below are examples of R shiny applications specifically designed to help researchers explore, understand, and analyze their data without the need to learn a new programming language or download software. All that is required is internet connection to open the link! These hassle-free simulators are tailored specifically for the researcher's primary question of interest and structure of their data set allowing them to quickly crunch numbers and investigate spur of the moment thoughts. Feel free to play with the applications, scroll through tabs, and adjust parameters to see their changes reflected by the tables and charts.</p></div>
         <div class="row">
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-6">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="small.png" alt="">
+              <img class="img-fluid" src="Survival.png" alt="">
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-6">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="small.png" alt="">
+              <img class="img-fluid" src="longitude.png" alt="">
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
+         <!--  <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -134,7 +131,7 @@
               </div>
               <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
             </a>
-          </div>
+          </div> -->
         </div>
         <div class="text-center">
           <p>If this is of interest for your research or business, please contact me for more information. Every application is completely customized to suit your needs. </p>
@@ -149,16 +146,16 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-6 ml-auto">
-            <p class="lead" id="me">Passionate healthcare data scientist with a thirst for knowledge. The backbone of my approach consists of needing to understand the "why" behind a process, action, or behavior, posing What if? questions, experimenting with cutting edge techniques and researching a problem from all angles to ultimately tell a story with data. Complimented with a MS in Biostatistics from Columbia University and relevant work experience at a quantitative growth strategy consulting firm, I have sharpened the necessary tools and developed the appropriate analytical thought process to pose questions and offer insight in a meticulous and detail oriented fashion to healthcare researchers, market analysts, and physicians by leveraging the power of data. </p>
+            <p class="lead" id="me">Passionate data scientist with strong interests in market research and healthcare/public health research. The backbone of my approach consists of needing to understand the "why" behind a process, action, or behavior, posing What if? questions, experimenting with cutting edge techniques and researching a problem from all angles to ultimately tell a story with data. Complimented with a MS in Biostatistics from Columbia University and relevant work experience at a quantitative market research consulting firm, I have sharpened the necessary tools and developed the appropriate analytical thought process to pose questions and offer insight in a meticulous and detail oriented fashion to healthcare researchers and market researchers by leveraging the power of data. </p>
           </div>
           <div class="col-lg-6 mr-auto">
             <p class="lead">
-              <img class="img-fluid" src="Hartaig_Resume.png" alt="" id="resume">
+              <a href="Hartaig_Singh_Resume (4).pdf" target="_blank"><img class="img-fluid" src="resume_updated.png" alt="" id="resume"></a>
             </p>
           </div>
         </div>
         <div class="text-center mt-4">
-          <p class="lead">Email: hartaigsingh@gmail.com</p>
+          <a href="mailto:hartaigsingh@gmail.com" id="mail"><p class="lead">Email: hartaigsingh@gmail.com</p></a>
         </div>
       </div>
     </section>
@@ -170,7 +167,7 @@
         <hr class="star-dark mb-5">
         <div class="row">
           <div class="col-lg-6 mx-auto">
-         <p class="lead" id="music_desc"> While my main area of expertise is data analysis and statistics, I am also a dedicated musician with particular interests in jazz guitar and electronic music production. Having a minor in Jazz music, I played guitar for the Stony Brook big band throughout my undergraduate studies. Major influences include Pink Floyd, Judas Priest, Led Zeppelin, Queen, Charlie Christian, Duke Ellington, Art Tatum, Count Basie, Deadmau5, Wolfgang Gartner, ZHU, Tujamo, and EPROM. Check me out on soundcloud below. </p>
+         <p class="lead" id="music_desc"> While my main area of expertise is data analysis and statistics, I am also a dedicated musician with particular interests in jazz guitar, electronic music production, and sound design. Having a minor in Jazz music, I played guitar for the Stony Brook big band throughout my undergraduate studies. I have collaborated and worked with fellow musicians, producers, and DJs and have developed a strong familiarity with the process of writing a song from thinking of an idea to instrumentation and mastering. Major influences include Pink Floyd, Judas Priest, Led Zeppelin, Queen, Charlie Christian, Duke Ellington, Art Tatum, Count Basie, Deadmau5, Wolfgang Gartner, ZHU, Tujamo, and EPROM. Check me out on soundcloud below. </p>
           </div>
            <div class="col-lg-6 mx-auto">
           <a href="https://soundcloud.com/hartaig-singh/it-dont-mean-a-thing"><img class="img-fluid" src="guitar_pic.jpg" alt="" id="music_pic"></a>
@@ -186,30 +183,46 @@
         <div class="row">
           <div class="col-md-4 ml-auto">
            <h3 class="text-center text-uppercase text-white">Programming</h3>
+           <br>
+           <img src="R.jpg" alt="r" class="img-fluid" id="R">
+           <img src="R shiny.jpg" alt="" class="img-fluid" id="shiny">
+           <img src="SAS.jpg" alt="" class="img-fluid" id="sas">
+           <br>
+           <img src="spss.jpg" alt="" class="img-fluid" id="spss">
+           <img src="sql.jpg" alt="" class="img-fluid" id="sql">
+           <img src="excel.jpg" alt="" class="img-fluid" id="excel">
           </div>
           <div class="col-md-4 mr-auto">
             <h3 class="text-center text-uppercase text-white">Methods</h3>
+            <br>
+            <ul id="skill">
+              <li>Regression Modeling</li>
+              <li>Survival Analysis</li>
+              <li>Longitudinal Analysis</li>
+              <li>Categorical Data</li>
+              <li>Survey Data</li>
+              <li>Market Research Analysis</li>
+              <li>Random Forest</li>
+              <li>CHAID</li>
+              <li>CART</li>
+              <li>Hypothesis Testing</li>
+              <li>Predictive Modeling</li>
+            </ul>
           </div>
-          <div class="col-md-4 mr-auto">
+          <div class="col-md-4 mr-auto" id="notes">
             <h3 class="text-center text-uppercase text-white">Music</h3>
+            <br>
+            <img src="fl studio.jpg" alt="" class="img-fluid" id="studio">
+            <img src="virtual dj.jpg" alt="" class="img-fluid" id="dj">
+            <br>
+            <img src="ableton.jpg" alt="" class="img-fluid" id="able">
+            <img src="jazz guitar.jpg" alt="" class="img-fluid" id="jazz">
           </div>
         </div>
       </div>
     </section>
 
-     <section id="mentor">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Mentoring</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-          </div>
-        </div>
-      </div>
-    </section>
-
+    
     <!-- Footer -->
     
     <footer class="footer text-center">
@@ -221,23 +234,18 @@
             <h4 class="text-uppercase mb-4">Contact</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="mailto:hartaigsingh@gmail.com">
                   <i class="fa fa-envelope"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/hartaig-singh-90227b127/">
                   <i class="fab fa-fw fa-linkedin-in"></i>
+                </a>
+              </li>
+               <li class="list-inline-item">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.instagram.com/hsingh94/">
+                  <i class="fab fa-fw fa-instagram"></i>
                 </a>
               </li>
             </ul>
@@ -274,11 +282,11 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Survival(Time to Event) Analysis</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+              <p class="mb-5">The goal of such methodology is to determine what are important drivers for the time it takes for an event to occur. In market research an event can defined as adoption of a new product while in healthcare an event can be death from a specific disease. Survival curves indicate the likelihood (y-axis) of the event occurring after a specific point in time (x-axis). Comparing survival curves between two patients or consumer types allows researchers to understand the patient/consumer profile that is at higher risk for the event to occur.</p>
+              <a class="btn btn-primary btn-lg" href="https://hartaig.shinyapps.io/Survival-Analysis/" target="_blank">
                 <i class="fa fa-close"></i>
                 Open Project</a>
             </div>
@@ -296,13 +304,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Longitudinal Analysis</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+              <p class="mb-5">The purpose of a longitudinal study is to see changes of a variable of interest over time depending on a subject's attributes. In such analyses, it it important to visualize the change over time for each subject through "spaghetti plots" by specific characteristics such as current product utilization, age, and other relevant attributes. In conjunction with robust longitudinal models, researchers can understand what patient or consumer characteristics are associated with changes of a variable of interest over time.</p>
+              <a class="btn btn-primary btn-lg" href=" https://hartaig.shinyapps.io/Longitudinal/" target="_blank">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Open Project</a>
             </div>
           </div>
         </div>
